# lab1_veekay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: shader.frag  shader.vert
source/: veekay.cpp
testbed/: CMakeLists.txt  main.cpp
